simplify concurrent groups impl